niro/src/test/resources/positive/simple.ql
form Box1HouseOwning {
	"Did you sell a house in 2010?" hasSoldHouse: boolean
	"Did you by a house in 2010?" hasBoughtHouse: boolean
}