niro/src/test/resources/negative/using-reserved-word-as-identifier.ql
form Box1HouseOwning {
 false: "Did you sell a house in 2010?" boolean
}